--- a/Blatt14_HeilandSchuikiSharma.tex
+++ b/Blatt14_HeilandSchuikiSharma.tex
@@ -36,59 +36,68 @@
 		
 		
 		
+		\pagebreak
+		
 		\section*{Aufgabe 4}
-			\paragraph*{a)}
-				$P_{p_o(0)}(S_2 \leq 0) = P_{p_o(0)}(S_2 = 0) = \beta$............(Kleiner als 0 ist nicht möglich)\\[1.5em]
-				
-				$\Leftrightarrow \binom{2}{0} \cdot p_o(0)^0 \cdot (1-p_o(0))^2 = \beta$\\[1.1em]
-				
-				$\Leftrightarrow (1-p_o(0))^2 - \beta = 0$\\[1.1em]
-				
-				$\Leftrightarrow 1 - 2p_o(0) + p_o(0)^2 - \beta = 0$\\[1.1em]
-				
-				$\Leftrightarrow p_o(0)^2 - 2p_o(0) + 1 - \beta$\\[1.1em]
-				
-				das kann man in die Mitternachtsformel einsetzen:\\[1.1em]
-				
-				$\dfrac{2 \pm \sqrt{4 - 4 \cdot (1 - \beta)}}{2} = \dfrac{2 \pm \sqrt{4\beta}}{2}$\\[1.1em]
-				
-				$= \dfrac{2 \pm 2\sqrt{\beta}}{2} = 1 \pm \sqrt{\beta}$\\ 
+			\subsection*{a)}
+				$P_{p_o(0)}(S_2 \leq 0) = P_{p_o(0)}(S_2 = 0) = \beta$\\[1em]
+				$\Leftrightarrow \binom{2}{0} \cdot p_o(0)^0 \cdot (1-p_o(0))^2 = \beta$\\[1em]
+				$\Leftrightarrow (1-p_o(0))^2 - \beta = 0$\\[1em]
+				$\Leftrightarrow 1 - 2p_o(0) + p_o(0)^2 - \beta = 0$\\[1em]
+				$\Leftrightarrow p_o(0)^2 - 2p_o(0) + 1 - \beta$\\[1em]
+				das kann man in die Mitternachtsformel einsetzen:\\[1em]
+				$\dfrac{2 \pm \sqrt{4 - 4 \cdot (1 - \beta)}}{2} = \dfrac{2 \pm \sqrt{4\beta}}{2}$\\[1em]
+				$= \dfrac{2 \pm 2\sqrt{\beta}}{2} = 1 \pm \sqrt{\beta}$\\ [1em]
 				Da $1 + \sqrt{\beta}$ nicht geht (P wäre dann größer als 1), bleibt nur $1 - \sqrt{\beta}$ übrig.\\[2em]
 				
+				$P_{p_o(1)}(S_2 \leq 1) = \beta$\\[1em]
+				$P_{p_o(1)}(S_2 = 0) + P_{p_o(1)}(S_2 = 1) = \beta$\\[1em]
+				$(1 - p_o(1))^2 + \binom{2}{1} \cdot p_o(1) \cdot (1 - p_o(1)) = \beta$\\[1em]
+				$-p_o(1)^2 - 2p_o(1) + 1 + 2\cdot p_o(1) - 2\cdot p_o(1)^2 = \beta$\\[1em]
+				$-p_o(1)^2 + 1 - \beta = 0$\\[1em]
+				Wieder mit der Mitternachtsformel:\\[1em]
+				$\dfrac{0 \pm\sqrt{-4 \cdot (-1) \cdot (1-\beta)}}{-2} =\dfrac{\pm \sqrt{4-4\beta}}{-2}$\\[1em]
+				$= \dfrac{\pm \sqrt{4(1-\beta)}}{-2} = \dfrac{\pm 2 \cdot \sqrt{1 - \beta}}{-2} = \pm \sqrt{1-\beta}$\\
+				Weil $-\sqrt{1-\beta}$ keinen Sinn ergibt (P < 0) $\rightarrow \sqrt{1-\beta}$ bleibt übrig.\\[2em]
 				
-				$P_{p_o(1)}(S_2 \leq 1) = \beta$\\[1.1em]
+				\pagebreak
+				$P{p_u(1)}(S_2<1) = 1-\beta$\\[1em]
+				$P{p_u(1)}(S_2\leq 0) = 1-\beta$\\[1em]
+				$(1-P{p_u(1)})^2= 1-\beta$\\[1em]
+				$p_u(1)^2 - 2p_u(1) +\beta= 0$\\[1em]
+				Wieder mit Mitternachtsformel:\\[1em]
+				$\Rightarrow \frac{2\pm\sqrt{(14-4*1*\beta)}}{2}$\\[1em]
+				$\Rightarrow 1\pm \sqrt{1-\beta}$\\[1em]
+				Ergebnis (Darf nicht größer 1 sein): $1- \sqrt{1-\beta}$\\[2em]
 				
-				$P_{p_o(1)}(S_2 = 0) + P_{p_o(1)}(S_2 = 1) = \beta$\\[1.1em]
+				$P{p_u(2)}(S_2<2) = 1-\beta$\\[1em]
+				$P{p_u(2)}(S_2\leq 1) = 1-\beta$\\[1em]
+				$-p_u(2)^2 +\beta= 0$\\[1em]
+				Wieder mit Mitternachtsformel:\\\\
+				$\Rightarrow \frac{\pm\sqrt{(-4(-1)(\beta)}}{-2}$\\[1em]
+				$\Rightarrow \pm \sqrt{\beta}$\\[1em]
+				Ergebnis: $+ \sqrt{\beta}\\$ 
+				Nur ein Ergebnis, da das Ergebnis nicht negativ sein darf.
 				
-				$(1 - p_o(1))^2 + \binom{2}{1} \cdot p_o(1) \cdot (1 - p_o(1)) = \beta$\\[1.1em]
-				
-				$p_o(1)^2 - 2p_o(1) + 1 + 2\cdot p_o(1) - 2\cdot p_o(1)^2 = \beta$\\[1.1em]
-				
-				$-p_o(1)^2 + 1 - \beta = 0$\\[1.1em]
-				
-				Wieder mit der Mitternachtsformel:\\[1.1em]
-				
-				$\dfrac{0 \pm\sqrt{-4 \cdot (-1) \cdot (1-\beta)}}{-2} =\dfrac{\pm \sqrt{4-4\beta}}{-2}$\\[1.1em]
-				
-				$= \dfrac{\pm \sqrt{4(1-\beta)}}{-2} = \dfrac{2 \cdot \sqrt{1 - \beta}}{-2} = \pm \sqrt{1-\beta}$\\
-				$-\sqrt{1-\beta}$ macht keinen Sinn (P < 0) $\rightarrow \sqrt{1-\beta}$ bleibt übrig.\\[2em]
-				
-				%%% Laura's Ergänzungen
-				$P{p_u(1)}(S_2<1) = 1-\beta\\\\
-				P{p_u(1)}(S_2\leq 0) = 1-\beta\\\\
-				(1-P{p_u(1)})^2= 1-\beta\\\\
-				p_u(1)^2 - 2p_u(1) +\beta= 0\\\\
-				Mitternachtsformel\Rightarrow \frac{2\pm\sqrt{(14-4*1*\beta)}}{2}\\\\
-				\Rightarrow 1\pm \sqrt{1-\beta}\\\\
-				Ergebnis: 1- \sqrt{1-\beta}\\\\
-				$
-				$P{p_u(2)}(S_2<2) = 1-\beta\\\\
-				P{p_u(2)}(S_2\leq 1) = 1-\beta\\\\
-				-p_u(2)^2 +\beta= 0\\\\
-				Mitternachtsformel \Rightarrow \frac{\pm\sqrt{(-4(-1)+\beta)}}{-2}\\\\
-				\Rightarrow \pm \sqrt{\beta}\\\\
-				Ergebnis: + \sqrt{\beta}\\$ 
-				Nur ein Ergebnis, da das Ergebnis nicht negativ sein darf!
+			\subsection*{b)}
+				Für $\beta=\frac{1}{5}$ und $\alpha=\frac{2}{5}$\\[1em]
+				Intervall aus a):\\[1em]
+				$[1-\sqrt{\frac{4}{5}},\sqrt{\frac{4}{5}}]=[0.11, 0.89]$\\[1em]
+				Intervall mit Tschebyscheff:\\[1em]
+				$[\frac{1}{2}-\sqrt{\frac{5}{16}},\frac{1}{2}+\sqrt{\frac{5}{16}}]=[-0.06, 1.05]$\\[1em]
+				Für $\beta=\frac{1}{4}$ und $\alpha=\frac{1}{2}$\\[1em]
+				Intervall aus a):\\[1em]
+				$[1-\sqrt{\frac{3}{4}},\sqrt{\frac{3}{4}}]=[0.13,0.87]$\\[1em]
+				Intervall mit Tschebyscheff:\\[1em]
+				$[\frac{1}{2}-\sqrt{\frac{1}{4}},\frac{1}{2}+\sqrt{\frac{1}{4}}]=[0,1]$\\[4em]
+				Für $\beta=\frac{1}{3}$ und $\alpha=\frac{2}{3}$\\[1em]
+				Intervall aus a):\\[1em]
+				$[1-\sqrt{\frac{2}{3}},\sqrt{\frac{2}{3}}]=[0.18,0.82]$\\[1em]
+				Intervall mit Tschebyscheff:\\[1em]
+				$[\frac{1}{2}-\sqrt{\frac{3}{16}},\frac{1}{2}+\sqrt{\frac{3}{16}}]=[0.07,0.93]$\\[2em]
+				Interpretation der Ergebnisse:\\
+				Für größeres $\beta$ werden alle Intervalle kleiner also genauer.\\
+				Offensichtlich sind jedoch die Grenzen aus a) um einiges genauer (Intervalle sind kleiner) als die sich aus der Tschebyscheff-Ungleichung ergebenden Grenzen. (Für $\beta=\frac{1}{5}$ sind diese sogar kleiner als 0 und größer als 1)
 				
 				
 				  
